Update README with Bootstrap details and finalize changes

--- a/about.html
+++ b/about.html
@@ -3,20 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - KicksLog</title>
+    <title>About - UrbanKicks</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2589/2589903.png">
 </head>
 <body>
     <div id="navbar-placeholder"></div>
 
     <div class="page-header">
         <div class="container">
-            <h1 class="display-4 fw-bold mb-3" style="color: var(--brown-color);">
-                <i class="bi bi-info-circle-fill"></i> KicksLogについて
+            <h1 class="display-4 fw-bold mb-3 text-brown">
+                <i class="bi bi-info-circle-fill"></i> UrbanKicksについて
             </h1>
-            <p class="lead" style="color: #78350f;">
+            <p class="lead text-brown">
                 スニーカーを愛するすべての人のためのプラットフォーム
             </p>
         </div>
@@ -25,12 +26,12 @@
     <div class="container py-5">
         <div class="row align-items-center mb-5">
             <div class="col-lg-6">
-                <h2 class="fw-bold mb-4" style="color: var(--brown-color);">私たちのミッション</h2>
+                <h2 class="fw-bold mb-4 text-brown">私たちのミッション</h2>
                 <p class="lead">
                     「一足のスニーカーには、その人の人生が詰まっている」
                 </p>
                 <p>
-                    KicksLogは、単なるコレクション管理ツールではありません。
+                    UrbanKicksは、単なるコレクション管理ツールではありません。
                     初めて買ったあの一足、大切な人から貰ったプレゼント、苦労して手に入れた限定モデル。
                     それぞれのスニーカーにある「物語」を記録し、長く大切に履き続けるためのサポートをすること。
                     それが私たちのミッションです。
