--- a/care-guide.html
+++ b/care-guide.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Care Guide - KicksLog</title>
+    <title>Care Guide - UrbanKicks</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2589/2589903.png">
 </head>
 <body>
     <!-- ナビゲーションバー -->
@@ -16,10 +17,10 @@
     <div class="page-header">
         <div class="container">
             <div class="text-center">
-                <h1 class="display-4 fw-bold mb-3" style="color: var(--brown-color);">
+                <h1 class="display-4 fw-bold mb-3 text-brown">
                     <i class="bi bi-tools"></i> お手入れガイド
                 </h1>
-                <p class="lead" style="color: var(--brown-color);">
+                <p class="lead text-brown">
                     大切なスニーカーを長く履くためのメンテナンス方法
                 </p>
             </div>
@@ -39,49 +40,47 @@
 
         <!-- カテゴリー選択 -->
         <section class="mb-5">
-            <h2 class="text-center fw-bold mb-4" style="color: var(--brown-color);">
+            <h2 class="text-center fw-bold mb-4 text-brown">
                 <i class="bi bi-grid-3x3-gap-fill"></i> カテゴリーから探す
             </h2>
 
             <div class="row g-4">
                 <div class="col-md-3 col-sm-6">
-                    <div class="category-card text-center">
-                        <div class="category-icon"
-                            style="background: rgba(16, 185, 129, 0.1); color: var(--primary-color);">
+                    <div class="card border-0 shadow-sm rounded-4 h-100 p-4 text-center">
+                        <div class="d-inline-flex align-items-center justify-content-center bg-success-subtle text-success rounded-circle mb-3" style="width: 60px; height: 60px; font-size: 1.5rem;">
                             <i class="bi bi-droplet"></i>
                         </div>
-                        <h5 class="fw-bold mb-2" style="color: var(--brown-color);">洗浄・クリーニング</h5>
+                        <h5 class="fw-bold mb-2 text-brown">洗浄・クリーニング</h5>
                         <p class="text-muted small mb-0">基本の洗い方</p>
                     </div>
                 </div>
 
                 <div class="col-md-3 col-sm-6">
-                    <div class="category-card text-center">
-                        <div class="category-icon"
-                            style="background: rgba(251, 146, 60, 0.1); color: var(--accent-color);">
+                    <div class="card border-0 shadow-sm rounded-4 h-100 p-4 text-center">
+                        <div class="d-inline-flex align-items-center justify-content-center bg-warning-subtle text-warning rounded-circle mb-3" style="width: 60px; height: 60px; font-size: 1.5rem;">
                             <i class="bi bi-shield-check"></i>
                         </div>
-                        <h5 class="fw-bold mb-2" style="color: var(--brown-color);">防水・防汚</h5>
+                        <h5 class="fw-bold mb-2 text-brown">防水・防汚</h5>
                         <p class="text-muted small mb-0">汚れを防ぐ技術</p>
                     </div>
                 </div>
 
                 <div class="col-md-3 col-sm-6">
-                    <div class="category-card text-center">
-                        <div class="category-icon" style="background: rgba(6, 182, 212, 0.1); color: #06b6d4;">
+                    <div class="card border-0 shadow-sm rounded-4 h-100 p-4 text-center">
+                        <div class="d-inline-flex align-items-center justify-content-center bg-info-subtle text-info rounded-circle mb-3" style="width: 60px; height: 60px; font-size: 1.5rem;">
                             <i class="bi bi-sun"></i>
                         </div>
-                        <h5 class="fw-bold mb-2" style="color: var(--brown-color);">黄ばみ除去</h5>
+                        <h5 class="fw-bold mb-2 text-brown">黄ばみ除去</h5>
                         <p class="text-muted small mb-0">ソールケア</p>
                     </div>
                 </div>
 
                 <div class="col-md-3 col-sm-6">
-                    <div class="category-card text-center">
-                        <div class="category-icon" style="background: rgba(139, 92, 246, 0.1); color: #8b5cf6;">
+                    <div class="card border-0 shadow-sm rounded-4 h-100 p-4 text-center">
+                        <div class="d-inline-flex align-items-center justify-content-center bg-primary-subtle text-primary rounded-circle mb-3" style="width: 60px; height: 60px; font-size: 1.5rem;">
                             <i class="bi bi-archive"></i>
                         </div>
-                        <h5 class="fw-bold mb-2" style="color: var(--brown-color);">保管方法</h5>
+                        <h5 class="fw-bold mb-2 text-brown">保管方法</h5>
                         <p class="text-muted small mb-0">加水分解対策</p>
                     </div>
                 </div>
@@ -93,70 +92,68 @@
             <div class="col-lg-8">
                 <!-- 人気ガイド -->
                 <section class="mb-5">
-                    <h3 class="fw-bold mb-4" style="color: var(--brown-color);">
+                    <h3 class="fw-bold mb-4 text-brown">
                         <i class="bi bi-star-fill text-warning"></i> 人気のガイド
                     </h3>
 
-                    <div class="guide-card">
+                    <div class="card border-0 shadow-sm rounded-4 p-3 mb-3 hover-transform">
                         <div class="d-flex align-items-center">
-                            <div class="guide-icon"
-                                style="background: rgba(16, 185, 129, 0.1); color: var(--primary-color);">
+                            <div class="d-inline-flex align-items-center justify-content-center bg-success-subtle text-success rounded-circle me-3" style="width: 50px; height: 50px; font-size: 1.2rem;">
                                 <i class="bi bi-bucket"></i>
                             </div>
                             <div class="flex-grow-1">
-                                <h5 class="fw-bold mb-1" style="color: var(--brown-color);">基本のスニーカー丸洗いマニュアル</h5>
+                                <h5 class="fw-bold mb-1 text-brown">基本のスニーカー丸洗いマニュアル</h5>
                                 <p class="text-muted mb-2 small">素材別の洗い方から乾燥まで徹底解説</p>
                                 <div>
-                                    <span class="tag-badge">洗浄</span>
-                                    <span class="tag-badge">初心者</span>
-                                    <span class="tag-badge">基本</span>
+                                    <span class="badge bg-secondary">洗浄</span>
+                                    <span class="badge bg-light text-dark border">初心者</span>
+                                    <span class="badge bg-light text-dark border">基本</span>
                                 </div>
                             </div>
-                            <i class="bi bi-chevron-right fs-4" style="color: var(--primary-color);"></i>
+                            <i class="bi bi-chevron-right fs-4 text-primary"></i>
                         </div>
                     </div>
 
-                    <div class="guide-card">
+                    <div class="card border-0 shadow-sm rounded-4 p-3 mb-3 hover-transform">
                         <div class="d-flex align-items-center">
-                            <div class="guide-icon"
-                                style="background: rgba(251, 146, 60, 0.1); color: var(--accent-color);">
+                            <div class="d-inline-flex align-items-center justify-content-center bg-warning-subtle text-warning rounded-circle me-3" style="width: 50px; height: 50px; font-size: 1.2rem;">
                                 <i class="bi bi-eraser"></i>
                             </div>
                             <div class="flex-grow-1">
-                                <h5 class="fw-bold mb-1" style="color: var(--brown-color);">ソール黄ばみの落とし方</h5>
+                                <h5 class="fw-bold mb-1 text-brown">ソール黄ばみの落とし方</h5>
                                 <p class="text-muted mb-2 small">バイオレットライトを使った本格ホワイトニング</p>
                                 <div>
-                                    <span class="tag-badge">ソール</span>
-                                    <span class="tag-badge">上級者</span>
-                                    <span class="tag-badge">黄ばみ</span>
+                                    <span class="badge bg-secondary">ソール</span>
+                                    <span class="badge bg-light text-dark border">上級者</span>
+                                    <span class="badge bg-light text-dark border">黄ばみ</span>
                                 </div>
                             </div>
-                            <i class="bi bi-chevron-right fs-4" style="color: var(--primary-color);"></i>
+                            <i class="bi bi-chevron-right fs-4 text-primary"></i>
                         </div>
                     </div>
 
-                    <div class="guide-card">
+                    <div class="card border-0 shadow-sm rounded-4 p-3 mb-3 hover-transform">
                         <div class="d-flex align-items-center">
-                            <div class="guide-icon" style="background: rgba(239, 68, 68, 0.1); color: #ef4444;">
+                            <div class="d-inline-flex align-items-center justify-content-center bg-danger-subtle text-danger rounded-circle me-3" style="width: 50px; height: 50px; font-size: 1.2rem;">
                                 <i class="bi bi-box-seam"></i>
                             </div>
                             <div class="flex-grow-1">
-                                <h5 class="fw-bold mb-1" style="color: var(--brown-color);">加水分解を防ぐ保管術</h5>
+                                <h5 class="fw-bold mb-1 text-brown">加水分解を防ぐ保管術</h5>
                                 <p class="text-muted mb-2 small">シュリンクラップと乾燥剤の正しい使い方</p>
                                 <div>
-                                    <span class="tag-badge">保管</span>
-                                    <span class="tag-badge">加水分解</span>
-                                    <span class="tag-badge">重要</span>
+                                    <span class="badge bg-secondary">保管</span>
+                                    <span class="badge bg-light text-dark border">加水分解</span>
+                                    <span class="badge bg-light text-dark border">重要</span>
                                 </div>
                             </div>
-                            <i class="bi bi-chevron-right fs-4" style="color: var(--primary-color);"></i>
+                            <i class="bi bi-chevron-right fs-4 text-primary"></i>
                         </div>
                     </div>
                 </section>
 
                 <!-- 詳細ガイド: 基本のメンテナンス -->
                 <section class="mb-5">
-                    <h3 class="fw-bold mb-4" style="color: var(--brown-color);">
+                    <h3 class="fw-bold mb-4 text-brown">
                         <i class="bi bi-book-half"></i> 日常メンテナンス - 完全ガイド
                     </h3>
 
@@ -288,12 +285,12 @@
             <!-- サイドバー -->
             <div class="col-lg-4">
                 <!-- 動画ガイド -->
-                <div class="guide-card mb-4">
-                    <h5 class="fw-bold mb-3" style="color: var(--brown-color);">
+                <div class="card border-0 shadow-sm rounded-4 p-4 mb-4">
+                    <h5 class="fw-bold mb-3 text-brown">
                         <i class="bi bi-play-circle"></i> 動画ガイド
                     </h5>
-                    <div class="video-thumbnail">
-                        <i class="bi bi-play-circle-fill"></i>
+                    <div class="ratio ratio-16x9 mb-3 rounded-3 overflow-hidden bg-dark d-flex align-items-center justify-content-center">
+                        <i class="bi bi-play-circle-fill text-white fs-1"></i>
                     </div>
                     <h6 class="fw-bold mb-2">プロ直伝！スニーカークリーニング</h6>
                     <p class="text-muted small mb-3">再生時間: 12:45</p>
@@ -303,8 +300,8 @@
                 </div>
 
                 <!-- おすすめ記事 -->
-                <div class="guide-card mb-4">
-                    <h5 class="fw-bold mb-3" style="color: var(--brown-color);">
+                <div class="card border-0 shadow-sm rounded-4 p-4 mb-4">
+                    <h5 class="fw-bold mb-3 text-brown">
                         <i class="bi bi-bookmark-star"></i> おすすめ記事
                     </h5>
                     <div class="mb-3 pb-3 border-bottom">
@@ -322,11 +319,11 @@
                 </div>
 
                 <!-- 人気ランキング -->
-                <div class="guide-card">
-                    <h5 class="fw-bold mb-3" style="color: var(--brown-color);">
+                <div class="card border-0 shadow-sm rounded-4 p-4 mb-4">
+                    <h5 class="fw-bold mb-3 text-brown">
                         <i class="bi bi-fire"></i> 人気ランキング
                     </h5>
-                    <ol class="ps-3">
+                    <ol class="ps-3 mb-0">
                         <li class="mb-2">
                             <a href="#" class="text-decoration-none text-dark">
                                 <small class="fw-bold">AJ1の黄ばみ取り完全版</small>
