--- a/sneaker-detail.html
+++ b/sneaker-detail.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detail - KicksLog</title>
+    <title>Detail - UrbanKicks</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2589/2589903.png">
 </head>
 <body>
     <div id="navbar-placeholder"></div>
@@ -46,29 +47,27 @@
             </button>
         </div>
 
-        <div class="pet-header">
-            <div class="row align-items-center">
-                <div class="col-md-8">
-                    <span class="badge" style="background: #fee2e2; color: #ef4444; padding: 10px 20px; border-radius: 50px; font-size: 1rem;">Chicago</span>
-                    <h1 class="display-4 fw-bold mt-3 mb-3" style="color: var(--brown-color);">Air Jordan 1 High OG</h1>
-                    <p class="lead text-muted">"Lost & Found" - ヴィンテージ加工が施された復刻モデル</p>
-                </div>
-                <div class="col-md-4 text-md-end">
-                    <button class="btn btn-danger btn-lg rounded-pill mb-2 w-100"><i class="bi bi-heart-fill"></i> お気に入り済</button>
-                    <button class="btn btn-outline-dark btn-lg rounded-pill w-100"><i class="bi bi-share"></i> シェア</button>
-                </div>
+        <div class="d-flex flex-wrap align-items-center mb-5">
+            <div class="col-md-8">
+                <span class="badge bg-danger-subtle text-danger rounded-pill px-3 py-2 mb-2">Chicago</span>
+                <h1 class="display-4 fw-bold mb-3 text-brown">Air Jordan 1 High OG</h1>
+                <p class="lead text-muted">"Lost & Found" - ヴィンテージ加工が施された復刻モデル</p>
+            </div>
+            <div class="col-md-4 text-md-end mt-3 mt-md-0">
+                <button class="btn btn-danger btn-lg rounded-pill mb-2 w-100 shadow-sm"><i class="bi bi-heart-fill"></i> お気に入り済</button>
+                <button class="btn btn-outline-dark btn-lg rounded-pill w-100 shadow-sm"><i class="bi bi-share"></i> シェア</button>
             </div>
         </div>
 
         <div class="row">
             <div class="col-lg-8">
-                <div class="info-card">
-                    <h3 class="fw-bold mb-4" style="color: var(--brown-color);"><i class="bi bi-info-circle-fill text-danger"></i> スペック情報</h3>
+                <div class="card border-0 shadow-sm rounded-4 p-4 mb-4">
+                    <h3 class="fw-bold mb-4 text-brown"><i class="bi bi-info-circle-fill text-danger"></i> スペック情報</h3>
                     <div class="row g-3 mb-4">
-                        <div class="col-md-3"><div class="stat-badge"><strong>発売日</strong><br>2022/11/19</div></div>
-                        <div class="col-md-3"><div class="stat-badge"><strong>定価</strong><br>¥20,900</div></div>
-                        <div class="col-md-3"><div class="stat-badge"><strong>スタイルコード</strong><br>DZ5485-612</div></div>
-                        <div class="col-md-3"><div class="stat-badge"><strong>サイズ</strong><br>27.5cm</div></div>
+                        <div class="col-md-3"><div class="p-3 bg-light rounded-3 text-center"><strong>発売日</strong><br>2022/11/19</div></div>
+                        <div class="col-md-3"><div class="p-3 bg-light rounded-3 text-center"><strong>定価</strong><br>¥20,900</div></div>
+                        <div class="col-md-3"><div class="p-3 bg-light rounded-3 text-center"><strong>スタイルコード</strong><br>DZ5485-612</div></div>
+                        <div class="col-md-3"><div class="p-3 bg-light rounded-3 text-center"><strong>サイズ</strong><br>27.5cm</div></div>
                     </div>
                     <p>スニーカーカルチャーの原点にして頂点。1985年に登場したオリジナルカラー「シカゴ」を、経年劣化したようなヴィンテージ加工で再現した一足。ひび割れたレザーの質感や、古いレシートが同梱されるなど、ストーリー性も完璧な仕上がり。</p>
                 </div>
@@ -130,8 +129,8 @@
             </div>
 
             <div class="col-lg-4">
-                <div class="sidebar-card">
-                    <h5 class="fw-bold mb-4" style="color: var(--brown-color);"><i class="bi bi-graph-up-arrow text-success"></i> マーケット相場</h5>
+                <div class="card border-0 shadow-sm rounded-4 p-4 mb-4">
+                    <h5 class="fw-bold mb-4 text-brown"><i class="bi bi-graph-up-arrow text-success"></i> マーケット相場</h5>
                     <div class="mb-3">
                         <div class="d-flex justify-content-between mb-2"><span>SNKRDUNK</span><strong>¥58,000</strong></div>
                         <div class="progress" style="height: 6px; border-radius: 10px;">
@@ -147,8 +146,8 @@
                     <p class="text-muted small text-end">※2024年11月時点の概算</p>
                 </div>
 
-                <div class="sidebar-card">
-                    <h5 class="fw-bold mb-4" style="color: var(--brown-color);"><i class="bi bi-star-half text-warning"></i> マイ評価</h5>
+                <div class="card border-0 shadow-sm rounded-4 p-4 mb-4">
+                    <h5 class="fw-bold mb-4 text-brown"><i class="bi bi-star-half text-warning"></i> マイ評価</h5>
                     <div class="mb-2 d-flex justify-content-between"><span>デザイン</span><strong class="text-warning">★★★★★</strong></div>
                     <div class="mb-2 d-flex justify-content-between"><span>履き心地</span><strong class="text-warning">★★★☆☆</strong></div>
                     <div class="mb-2 d-flex justify-content-between"><span>レア度</span><strong class="text-warning">★★★★★</strong></div>
@@ -156,8 +155,8 @@
                     <div class="mb-2 d-flex justify-content-between"><span>総合評価</span><strong class="fs-4 text-warning">4.8</strong></div>
                 </div>
 
-                <div class="sidebar-card">
-                    <h5 class="fw-bold mb-3" style="color: var(--brown-color);"><i class="bi bi-tags"></i> タグ</h5>
+                <div class="card border-0 shadow-sm rounded-4 p-4 mb-4">
+                    <h5 class="fw-bold mb-3 text-brown"><i class="bi bi-tags"></i> タグ</h5>
                     <div class="d-flex flex-wrap gap-2">
                         <span class="badge bg-danger">#NIKE</span>
                         <span class="badge bg-dark">#Jordan1</span>
