--- a/coordinate-log.html
+++ b/coordinate-log.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Outfit Log - KicksLog</title>
+    <title>Style Log - UrbanKicks</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2589/2589903.png">
 </head>
 <body>
     <!-- ナビゲーションバー -->
@@ -16,10 +17,10 @@
     <div class="page-header">
         <div class="container">
             <div class="text-center">
-                <h1 class="display-4 fw-bold mb-3" style="color: var(--brown-color);">
+                <h1 class="display-4 fw-bold mb-3 text-brown">
                     <i class="bi bi-journal-text"></i> コーデ記録・着用ログ
                 </h1>
-                <p class="lead" style="color: var(--brown-color);">
+                <p class="lead text-brown">
                     今日の一足とコーディネートを記録しよう
                 </p>
             </div>
@@ -32,26 +33,26 @@
             <div class="row align-items-center">
                 <div class="col-md-3 text-center mb-3 mb-md-0">
                         <img src="https://placehold.co/120x120/10b981/ffffff?text=User" alt="User" class="pet-avatar">
-                    <h4 class="mt-3 mb-2 fw-bold" style="color: var(--brown-color);">KicksMaster</h4>
+                    <h4 class="mt-3 mb-2 fw-bold text-brown">KicksMaster</h4>
                     <p class="text-muted mb-0">Sneaker Head</p>
                 </div>
                 <div class="col-md-9">
                     <div class="row">
                         <div class="col-6 col-md-3 mb-3">
                             <small class="text-muted d-block">所持数</small>
-                            <strong class="h5" style="color: var(--brown-color);">45足</strong>
+                            <strong class="h5 text-brown">45足</strong>
                         </div>
                         <div class="col-6 col-md-3 mb-3">
                             <small class="text-muted d-block">今月の購入</small>
-                            <strong class="h5" style="color: var(--brown-color);">2足</strong>
+                            <strong class="h5 text-brown">2足</strong>
                         </div>
                         <div class="col-6 col-md-3 mb-3">
                             <small class="text-muted d-block">総額（概算）</small>
-                            <strong class="h5" style="color: var(--brown-color);">¥850,000</strong>
+                            <strong class="h5 text-brown">¥850,000</strong>
                         </div>
                         <div class="col-6 col-md-3 mb-3">
-                            <small class="text-muted d-block">KicksLog歴</small>
-                            <strong class="h5" style="color: var(--brown-color);">3年</strong>
+                            <small class="text-muted d-block">UrbanKicks歴</small>
+                            <strong class="h5 text-brown">3年</strong>
                         </div>
                     </div>
                     <div class="mt-2">
@@ -72,7 +73,7 @@
                 <!-- フィルターボタン -->
                 <div class="record-table">
                     <div class="d-flex justify-content-between align-items-center mb-3">
-                        <h4 class="fw-bold mb-0" style="color: var(--brown-color);">
+                        <h4 class="fw-bold mb-0 text-brown">
                             <i class="bi bi-clipboard2-data"></i> 着用ログ一覧
                         </h4>
                         <button class="btn btn-add-record">
@@ -177,7 +178,7 @@
             <!-- 右カラム：タイムライン -->
             <div class="col-lg-4">
                 <div class="progress-card mb-4">
-                    <h5 class="fw-bold mb-4" style="color: var(--brown-color);">
+                    <h5 class="fw-bold mb-4 text-brown">
                         <i class="bi bi-clock-history"></i> 最近のアクティビティ
                     </h5>
 
@@ -194,7 +195,7 @@
 
                 <!-- おすすめアクション -->
                 <div class="progress-card">
-                    <h5 class="fw-bold mb-3" style="color: var(--brown-color);">
+                    <h5 class="fw-bold mb-3 text-brown">
                         <i class="bi bi-lightbulb-fill text-warning"></i> おすすめアクション
                     </h5>
                     <div class="d-grid gap-2">
