--- a/index.html
+++ b/index.html
@@ -3,37 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - KicksLog</title>
+    <title>Home - UrbanKicks</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2589/2589903.png">
 </head>
 <body>
     <!-- ナビゲーションバー -->
     <div id="navbar-placeholder"></div>
 
     <!-- ヒーローセクション -->
-    <div class="hero-section">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-6 mb-4 mb-lg-0">
-                    <h1 class="display-3 fw-bold mb-4" style="color: var(--brown-color);">
-                        あなただけの最高の一足を<br>見つけよう
+    <div class="hero-section container-fluid px-0 mb-5">
+        <div class="container py-5">
+            <div class="row align-items-center flex-md-row-reverse">
+                <div class="col-lg-6 text-center mb-4 mb-lg-0">
+                    <img src="https://placehold.co/600x400/10b981/ffffff?text=KicksLog+Hero" class="img-fluid rounded-4 shadow-lg hero-image" alt="スニーカーイラスト">
+                </div>
+                <div class="col-lg-6">
+                    <h1 class="display-3 fw-bold mb-4 text-brown">
+                        運命の一足を、<br>もっと身近に。
                     </h1>
-                    <p class="lead mb-4" style="color: #78350f;">
-                        スニーカーライフをより充実させるための情報サイト。<br>新作情報、メンテナンス方法、コーディネート記録まで網羅！
+                    <p class="lead mb-4 text-muted">
+                        スニーカーヘッズのための究極のハブ。<br>最新のドロップ情報、ケアガイド、そしてスタイルログまで。
                     </p>
                     <div class="d-flex gap-3">
-                        <button class="btn btn-primary-custom" onclick="location.href='sneaker-list.html'">
+                        <button class="btn btn-primary-custom btn-lg shadow-sm" onclick="location.href='sneaker-list.html'">
                             <i class="bi bi-search"></i> コレクションを見る
                         </button>
-                        <button class="btn btn-outline-dark rounded-pill px-4 py-3 fw-bold" onclick="location.href='care-guide.html'">
-                            <i class="bi bi-book"></i> 手入れ方法を知る
+                        <button class="btn btn-outline-dark btn-lg rounded-pill px-4 fw-bold shadow-sm" onclick="location.href='care-guide.html'">
+                            <i class="bi bi-book"></i> お手入れガイド
                         </button>
                     </div>
-                </div>
-                <div class="col-lg-6 text-center">
-                    <img src="https://placehold.co/500x400/10b981/ffffff?text=Nice+Kicks" class="hero-image" alt="スニーカーイラスト">
                 </div>
             </div>
         </div>
@@ -68,181 +69,74 @@
             </div>
         </div>
 
-        <!-- 今月のPick Up -->
+        <!-- Monthly Pick Up Carousel -->
         <section class="mb-5">
-            <h2 class="text-center fw-bold section-title">
-                <i class="bi bi-star-fill text-warning"></i> 今月のPick Up
+            <h2 class="text-center fw-bold section-title mb-5">
+                <i class="bi bi-star-fill text-warning"></i> 今月のピックアップ
             </h2>
-            <p class="text-center text-muted mb-5">今話題の注目スニーカーをご紹介</p>
-
-            <div class="row g-4">
-                <div class="col-md-4">
-                    <div class="pet-card">
-                        <div class="pet-icon">
-                            <i class="bi bi-emoji-smile"></i>
-                        </div>
-                        <div class="text-center">
-                            <span class="category-badge">NIKE</span>
-                            <h4 class="fw-bold mb-3">Air Jordan 1 High</h4>
-                            <p class="text-muted mb-4">
-                                スニーカーカルチャーの象徴。伝説の始まりとも言える不朽の名作。
-                            </p>
-                            <div class="d-flex justify-content-around mb-3">
-                                <div>
-                                    <small class="text-muted d-block">レア度</small>
-                                    <div class="text-warning">★★★★☆</div>
-                                </div>
-                                <div>
-                                    <small class="text-muted d-block">人気度</small>
-                                    <div class="text-warning">★★★★★</div>
+            
+            <div id="sneakerCarousel" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="d-flex justify-content-center">
+                            <div class="card h-100 border-0 shadow-sm rounded-4 overflow-hidden w-75">
+                                <img src="https://placehold.co/800x400/e5e7eb/a3a3a3?text=Air+Jordan+1" class="card-img-top" alt="Air Jordan 1">
+                                <div class="card-body text-center p-4">
+                                    <span class="badge bg-secondary mb-2">NIKE</span>
+                                    <h4 class="card-title fw-bold mb-2">Air Jordan 1 High</h4>
+                                    <p class="card-text text-muted small mb-3">
+                                        スニーカーカルチャーのアイコン。時代を超えた名作。
+                                    </p>
+                                    <button class="btn btn-outline-success rounded-pill px-4" onclick="location.href='sneaker-detail.html'">
+                                        詳細を見る <i class="bi bi-arrow-right"></i>
+                                    </button>
                                 </div>
                             </div>
-                            <button class="btn btn-outline-success rounded-pill w-100" onclick="location.href='sneaker-detail.html'">
-                                詳細を見る <i class="bi bi-arrow-right"></i>
-                            </button>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="d-flex justify-content-center">
+                             <div class="card h-100 border-0 shadow-sm rounded-4 overflow-hidden w-75">
+                                <img src="https://placehold.co/800x400/fb923c/ffffff?text=Samba+OG" class="card-img-top" alt="Adidas Samba">
+                                <div class="card-body text-center p-4">
+                                    <span class="badge bg-warning text-dark mb-2">ADIDAS</span>
+                                    <h4 class="card-title fw-bold mb-2">Adidas Samba OG</h4>
+                                    <p class="card-text text-muted small mb-3">
+                                        クラシックなデザインが再評価され、ストリートで大ブレイク中。
+                                    </p>
+                                    <button class="btn btn-outline-warning rounded-pill px-4" onclick="location.href='sneaker-detail.html'">
+                                        詳細を見る <i class="bi bi-arrow-right"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                         <div class="d-flex justify-content-center">
+                            <div class="card h-100 border-0 shadow-sm rounded-4 overflow-hidden w-75">
+                                <img src="https://placehold.co/800x400/06b6d4/ffffff?text=NB+990v6" class="card-img-top" alt="New Balance 990v6">
+                                <div class="card-body text-center p-4">
+                                    <span class="badge bg-info text-dark mb-2">New Balance</span>
+                                    <h4 class="card-title fw-bold mb-2">New Balance 990v6</h4>
+                                    <p class="card-text text-muted small mb-3">
+                                        「1000点満点中990点」の履き心地。究極の一足。
+                                    </p>
+                                    <button class="btn btn-outline-info rounded-pill px-4" onclick="location.href='sneaker-detail.html'">
+                                        詳細を見る <i class="bi bi-arrow-right"></i>
+                                    </button>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-
-                <div class="col-md-4">
-                    <div class="pet-card">
-                        <div class="pet-icon" style="background: linear-gradient(135deg, #f59e0b, #fb923c);">
-                            <i class="bi bi-emoji-heart-eyes"></i>
-                        </div>
-                        <div class="text-center">
-                            <span class="category-badge" style="background: #fb923c;">ADIDAS</span>
-                            <h4 class="fw-bold mb-3">Adidas Samba OG</h4>
-                            <p class="text-muted mb-4">
-                                クラシックなデザインが再評価され、ストリートで大ブレイク中。
-                            </p>
-                            <div class="d-flex justify-content-around mb-3">
-                                <div>
-                                    <small class="text-muted d-block">レア度</small>
-                                    <div class="text-warning">★★★★★</div>
-                                </div>
-                                <div>
-                                    <small class="text-muted d-block">人気度</small>
-                                    <div class="text-warning">★★★★★</div>
-                                </div>
-                            </div>
-                            <button class="btn btn-outline-warning rounded-pill w-100" onclick="location.href='sneaker-detail.html'">
-                                詳細を見る <i class="bi bi-arrow-right"></i>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="pet-card">
-                        <div class="pet-icon" style="background: linear-gradient(135deg, #06b6d4, #3b82f6);">
-                            <i class="bi bi-droplet-fill"></i>
-                        </div>
-                        <div class="text-center">
-                            <span class="category-badge" style="background: #06b6d4;">New Balance</span>
-                            <h4 class="fw-bold mb-3">New Balance 990v6</h4>
-                            <p class="text-muted mb-4">
-                                「1000点満点で990点」のキャッチコピー通りの最高の履き心地。
-                            </p>
-                            <div class="d-flex justify-content-around mb-3">
-                                <div>
-                                    <small class="text-muted d-block">レア度</small>
-                                    <div class="text-warning">★★★★★</div>
-                                </div>
-                                <div>
-                                    <small class="text-muted d-block">人気度</small>
-                                    <div class="text-warning">★★★★☆</div>
-                                </div>
-                            </div>
-                            <button class="btn btn-outline-info rounded-pill w-100" onclick="location.href='sneaker-detail.html'">
-                                詳細を見る <i class="bi bi-arrow-right"></i>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="pet-card">
-                        <div class="pet-icon" style="background: linear-gradient(135deg, #8b5cf6, #ec4899);">
-                            <i class="bi bi-feather"></i>
-                        </div>
-                        <div class="text-center">
-                            <span class="category-badge" style="background: #8b5cf6;">NIKE</span>
-                            <h4 class="fw-bold mb-3">Air Force 1 '07</h4>
-                            <p class="text-muted mb-4">
-                                誰もが一度は履いたことがある王道の白スニーカー。
-                            </p>
-                            <div class="d-flex justify-content-around mb-3">
-                                <div>
-                                    <small class="text-muted d-block">レア度</small>
-                                    <div class="text-warning">★★★★☆</div>
-                                </div>
-                                <div>
-                                    <small class="text-muted d-block">人気度</small>
-                                    <div class="text-warning">★★★★☆</div>
-                                </div>
-                            </div>
-                            <button class="btn rounded-pill w-100" style="border: 2px solid #8b5cf6; color: #8b5cf6;" onclick="location.href='sneaker-detail.html'">
-                                詳細を見る <i class="bi bi-arrow-right"></i>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="pet-card">
-                        <div class="pet-icon" style="background: linear-gradient(135deg, #14b8a6, #10b981);">
-                            <i class="bi bi-water"></i>
-                        </div>
-                        <div class="text-center">
-                            <span class="category-badge" style="background: #14b8a6;">ADIDAS</span>
-                            <h4 class="fw-bold mb-3">Yeezy Boost 350 V2</h4>
-                            <p class="text-muted mb-4">
-                                革命的なクッション性と独創的なデザイン。
-                            </p>
-                            <div class="d-flex justify-content-around mb-3">
-                                <div>
-                                    <small class="text-muted d-block">レア度</small>
-                                    <div class="text-warning">★★★★☆</div>
-                                </div>
-                                <div>
-                                    <small class="text-muted d-block">人気度</small>
-                                    <div class="text-warning">★★★☆☆</div>
-                                </div>
-                            </div>
-                            <button class="btn rounded-pill w-100" style="border: 2px solid #14b8a6; color: #14b8a6;" onclick="location.href='sneaker-detail.html'">
-                                詳細を見る <i class="bi bi-arrow-right"></i>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="pet-card">
-                        <div class="pet-icon" style="background: linear-gradient(135deg, #3b82f6, #06b6d4);">
-                            <i class="bi bi-diagram-3-fill"></i>
-                        </div>
-                        <div class="text-center">
-                            <span class="category-badge" style="background: #3b82f6;">VANS</span>
-                            <h4 class="fw-bold mb-3">Vans Old Skool</h4>
-                            <p class="text-muted mb-4">
-                                スケーターだけでなく、幅広い層に愛される定番モデル。
-                            </p>
-                            <div class="d-flex justify-content-around mb-3">
-                                <div>
-                                    <small class="text-muted d-block">レア度</small>
-                                    <div class="text-warning">★★★★☆</div>
-                                </div>
-                                <div>
-                                    <small class="text-muted d-block">人気度</small>
-                                    <div class="text-warning">★★★★☆</div>
-                                </div>
-                            </div>
-                            <button class="btn btn-outline-primary rounded-pill w-100" onclick="location.href='sneaker-detail.html'">
-                                詳細を見る <i class="bi bi-arrow-right"></i>
-                            </button>
-                        </div>
-                    </div>
-                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#sneakerCarousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon bg-dark rounded-circle" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#sneakerCarousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon bg-dark rounded-circle" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
         </section>
 
@@ -305,7 +199,7 @@
                                 <i class="bi bi-heart-fill"></i>
                             </div>
                             <h5 class="fw-bold text-brown">NIKE</h5>
-                            <small class="text-muted">120 Models</small>
+                            <small class="text-muted">120モデル</small>
                         </div>
                     </a>
                 </div>
@@ -316,7 +210,7 @@
                                 <i class="bi bi-balloon-heart"></i>
                             </div>
                             <h5 class="fw-bold text-brown">ADIDAS</h5>
-                            <small class="text-muted">80 Models</small>
+                            <small class="text-muted">80モデル</small>
                         </div>
                     </a>
                 </div>
@@ -327,7 +221,7 @@
                                 <i class="bi bi-brightness-alt-high"></i>
                             </div>
                             <h5 class="fw-bold text-brown">New Balance</h5>
-                            <small class="text-muted">45 Models</small>
+                            <small class="text-muted">45モデル</small>
                         </div>
                     </a>
                 </div>
@@ -338,7 +232,7 @@
                                 <i class="bi bi-cloud"></i>
                             </div>
                             <h5 class="fw-bold text-brown">VANS</h5>
-                            <small class="text-muted">35 Models</small>
+                            <small class="text-muted">35モデル</small>
                         </div>
                     </a>
                 </div>
