--- a/sneaker-faq.html
+++ b/sneaker-faq.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAQ - KicksLog</title>
+    <title>FAQ - UrbanKicks</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2589/2589903.png">
 </head>
 
 <body>
@@ -17,11 +18,11 @@
     <div class="page-header">
         <div class="container">
             <div class="text-center mb-4">
-                <h1 class="display-4 fw-bold" style="color: var(--brown-color);">
-                    <i class="bi bi-chat-dots-fill"></i> Q&A・お悩み相談
+                <h1 class="display-4 fw-bold text-brown">
+                    <i class="bi bi-chat-dots-fill"></i> Q&A・相談
                 </h1>
-                <p class="lead" style="color: var(--brown-color);">
-                    スニーカーに関する疑問や悩みを解決しましょう
+                <p class="lead text-brown">
+                    スニーカーに関する疑問や悩みを解決しよう
                 </p>
             </div>
 
@@ -88,25 +89,25 @@
                                 <div id="faq1" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
                                     <div class="accordion-body">
                                         <div class="mb-3">
-                                            <span class="badge-category">NIKE</span>
-                                            <span class="badge-category" style="background: #8b5cf6;">サイズ</span>
+                                            <span class="badge bg-secondary me-1">NIKE</span>
+                                            <span class="badge" style="background: #8b5cf6;">サイズ</span>
                                         </div>
-                                        <div class="answer-highlight">
+                                        <div class="bg-light p-3 rounded-3 mb-3 border-start border-4 border-success">
                                             <h6 class="fw-bold text-success mb-2">
                                                 <i class="bi bi-check-circle-fill"></i> ベストアンサー
                                             </h6>
-                                            <p>基本的に普段のサイズ（ジャストサイズ）またはハーフサイズ（0.5cm）アップがおすすめです。幅広の足の方はハーフアップが安心です。</p>
+                                            <p class="mb-0">基本的に普段のサイズ（ジャストサイズ）またはハーフサイズ（0.5cm）アップがおすすめです。幅広の足の方はハーフアップが安心です。</p>
                                         </div>
-                                        <div class="question-meta">
-                                            <div class="meta-item">
-                                                <i class="bi bi-person-circle"></i><span>KicksMaster</span>
+                                        <div class="d-flex align-items-center text-muted small mb-3">
+                                            <div class="me-3">
+                                                <i class="bi bi-person-circle"></i><span> KicksMaster</span>
                                             </div>
-                                            <div class="meta-item">
-                                                <i class="bi bi-hand-thumbs-up"></i><span>312人が参考になった</span>
+                                            <div>
+                                                <i class="bi bi-hand-thumbs-up"></i><span> 312人が参考になった</span>
                                             </div>
                                         </div>
-                                        <div class="mt-3">
-                                            <button class="helpful-btn">
+                                        <div>
+                                            <button class="btn btn-outline-success btn-sm rounded-pill helpful-btn">
                                                 <i class="bi bi-hand-thumbs-up"></i> 参考になった
                                             </button>
                                         </div>
@@ -125,25 +126,25 @@
                                 <div id="faq2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                                     <div class="accordion-body">
                                         <div class="mb-3">
-                                            <span class="badge-category" style="background: #fb923c;">全般</span>
-                                            <span class="badge-category" style="background: #ef4444;">修理</span>
+                                            <span class="badge me-1" style="background: #fb923c;">全般</span>
+                                            <span class="badge bg-danger">修理</span>
                                         </div>
-                                        <div class="answer-highlight">
+                                        <div class="bg-light p-3 rounded-3 mb-3 border-start border-4 border-success">
                                             <h6 class="fw-bold text-success mb-2">
                                                 <i class="bi bi-check-circle-fill"></i> ベストアンサー
                                             </h6>
-                                            <p>加水分解したソールは元に戻せません。ただし、「ソールスワップ」という専門店での移植修理なら可能です。</p>
+                                            <p class="mb-0">加水分解したソールは元に戻せません。ただし、「ソールスワップ」という専門店での移植修理なら可能です。</p>
                                         </div>
-                                        <div class="question-meta">
-                                            <div class="meta-item">
-                                                <i class="bi bi-person-circle"></i><span>RepairPro</span>
+                                        <div class="d-flex align-items-center text-muted small mb-3">
+                                            <div class="me-3">
+                                                <i class="bi bi-person-circle"></i><span> RepairPro</span>
                                             </div>
-                                            <div class="meta-item">
-                                                <i class="bi bi-hand-thumbs-up"></i><span>487人が参考になった</span>
+                                            <div>
+                                                <i class="bi bi-hand-thumbs-up"></i><span> 487人が参考になった</span>
                                             </div>
                                         </div>
-                                        <div class="mt-3">
-                                            <button class="helpful-btn">
+                                        <div>
+                                            <button class="btn btn-outline-success btn-sm rounded-pill helpful-btn">
                                                 <i class="bi bi-hand-thumbs-up"></i> 参考になった
                                             </button>
                                         </div>
@@ -162,25 +163,25 @@
                                 <div id="faq3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                                     <div class="accordion-body">
                                         <div class="mb-3">
-                                            <span class="badge-category" style="background: #06b6d4;">鑑定</span>
-                                            <span class="badge-category" style="background: #ef4444;">注意</span>
+                                            <span class="badge me-1" style="background: #06b6d4;">鑑定</span>
+                                            <span class="badge bg-danger">注意</span>
                                         </div>
-                                        <div class="answer-highlight">
+                                        <div class="bg-light p-3 rounded-3 mb-3 border-start border-4 border-success">
                                             <h6 class="fw-bold text-success mb-2">
                                                 <i class="bi bi-check-circle-fill"></i> ベストアンサー
                                             </h6>
-                                            <p>ボックスのラベル、縫製の粗さ、インソールのプリント、そして特有の匂いがポイントです。不安な場合は鑑定サービスを利用しましょう。</p>
+                                            <p class="mb-0">ボックスのラベル、縫製の粗さ、インソールのプリント、そして特有の匂いがポイントです。不安な場合は鑑定サービスを利用しましょう。</p>
                                         </div>
-                                        <div class="question-meta">
-                                            <div class="meta-item">
-                                                <i class="bi bi-person-circle"></i><span>SneakerHead</span>
+                                        <div class="d-flex align-items-center text-muted small mb-3">
+                                            <div class="me-3">
+                                                <i class="bi bi-person-circle"></i><span> SneakerHead</span>
                                             </div>
-                                            <div class="meta-item">
-                                                <i class="bi bi-hand-thumbs-up"></i><span>890人が参考になった</span>
+                                            <div>
+                                                <i class="bi bi-hand-thumbs-up"></i><span> 890人が参考になった</span>
                                             </div>
                                         </div>
-                                        <div class="mt-3">
-                                            <button class="helpful-btn">
+                                        <div>
+                                            <button class="btn btn-outline-success btn-sm rounded-pill helpful-btn">
                                                 <i class="bi bi-hand-thumbs-up"></i> 参考になった
                                             </button>
                                         </div>
@@ -193,32 +194,32 @@
             </div>
 
             <div class="col-lg-4">
-                <div class="sidebar-card">
-                    <button class="btn btn-post-question">
+                <div class="card border-0 shadow-sm rounded-4 p-4 mb-4">
+                    <button class="btn btn-primary-custom w-100 py-3 rounded-pill shadow-sm">
                         <i class="bi bi-plus-circle"></i> 質問を投稿する
                     </button>
                 </div>
 
-                <div class="sidebar-card">
-                    <h5 class="fw-bold mb-4" style="color: var(--brown-color);">
+                <div class="card border-0 shadow-sm rounded-4 p-4 mb-4">
+                    <h5 class="fw-bold mb-4 text-brown">
                         <i class="bi bi-trophy-fill text-warning"></i> 人気の質問
                     </h5>
-                    <div class="ranking-item">
-                        <div class="ranking-number gold">1</div>
+                    <div class="d-flex align-items-center mb-3">
+                        <div class="badge rounded-circle bg-warning text-dark me-3 d-flex align-items-center justify-content-center" style="width: 30px; height: 30px;">1</div>
                         <div>
                             <h6 class="fw-bold mb-1 small">Yeezy Boost 350のサイズ感</h6>
                             <small class="text-muted">523人が参考にしました</small>
                         </div>
                     </div>
-                    <div class="ranking-item">
-                        <div class="ranking-number silver">2</div>
+                    <div class="d-flex align-items-center mb-3">
+                        <div class="badge rounded-circle bg-secondary text-white me-3 d-flex align-items-center justify-content-center" style="width: 30px; height: 30px;">2</div>
                         <div>
                             <h6 class="fw-bold mb-1 small">黄ばみを取る最強の方法</h6>
                             <small class="text-muted">487人が参考にしました</small>
                         </div>
                     </div>
-                    <div class="ranking-item">
-                        <div class="ranking-number bronze">3</div>
+                    <div class="d-flex align-items-center mb-3">
+                        <div class="badge rounded-circle bg-secondary text-white me-3 d-flex align-items-center justify-content-center" style="width: 30px; height: 30px; background-color: #cd7f32 !important;">3</div>
                         <div>
                             <h6 class="fw-bold mb-1 small">StockXとSNKRDUNKどっちがいい？</h6>
                             <small class="text-muted">412人が参考にしました</small>
