--- a/wish-list.html
+++ b/wish-list.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wish List - KicksLog</title>
+    <title>Wish List - UrbanKicks</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2589/2589903.png">
 </head>
 <body>
     <!-- ナビゲーションバー -->
@@ -17,12 +18,12 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 mb-4 mb-lg-0">
-                    <h1 class="display-3 fw-bold mb-4" style="color: var(--brown-color);">
-                        次はどのスニーカーを<br>手に入れる？
+                    <h1 class="display-3 fw-bold mb-4 text-brown">
+                        次に狙う一足は？
                     </h1>
-                    <p class="lead mb-4" style="color: #78350f;">
-                        狙っているモデルをリストアップして、購入計画を立てよう。<br>
-                        発売日通知や価格変動チェックも（予定）。
+                    <p class="lead mb-4 text-brown">
+                        欲しいモデルをリストアップして、購入計画を立てよう。<br>
+                        発売日通知や、価格チェック機能も近日公開予定。
                     </p>
                     <div class="d-flex gap-3">
                         <button class="btn btn-primary-custom">
@@ -68,7 +69,7 @@
 
         <!-- ウィッシュリスト -->
         <section class="mb-5">
-            <h2 class="text-center fw-bold section-title" style="color: var(--brown-color);">
+            <h2 class="text-center fw-bold section-title text-brown">
                 <i class="bi bi-heart-fill text-danger"></i> My Wish List
             </h2>
             <p class="text-center text-muted mb-5">優先度順に表示中</p>
@@ -76,15 +77,15 @@
             <div class="row g-4">
                 <!-- アイテム 1 -->
                 <div class="col-md-4">
-                    <div class="pet-card">
-                        <div class="position-absolute top-0 end-0 m-3">
-                            <span class="badge bg-danger rounded-pill">優先度：高</span>
+                    <div class="card h-100 border-0 shadow-sm rounded-4 overflow-hidden position-relative">
+                        <div class="position-absolute top-0 end-0 m-3 z-1">
+                            <span class="badge bg-danger rounded-pill shadow-sm">優先度：高</span>
                         </div>
                         <img src="https://placehold.co/400x250/333333/ffffff?text=Travis+Scott+AJ1" class="card-img-top" alt="Travis Scott">
-                        <div class="p-4 text-center">
-                            <span class="category-badge">NIKE</span>
-                            <h4 class="fw-bold mb-2 text-brown">Travis Scott x AJ1</h4>
-                            <p class="text-muted small mb-3">
+                        <div class="card-body text-center p-4">
+                            <span class="badge bg-secondary mb-2">NIKE</span>
+                            <h4 class="card-title fw-bold mb-2 text-brown">Travis Scott x AJ1</h4>
+                            <p class="card-text text-muted small mb-3">
                                 "Reverse Mocha"<br>
                                 プレ値でも欲しい至高の一足。
                             </p>
@@ -98,7 +99,7 @@
                                     <div class="fw-bold">発売中</div>
                                 </div>
                             </div>
-                            <button class="btn btn-outline-danger rounded-pill w-100">
+                            <button class="btn btn-outline-danger rounded-pill w-100 stretched-link">
                                 詳細を見る <i class="bi bi-arrow-right"></i>
                             </button>
                         </div>
@@ -107,15 +108,15 @@
 
                 <!-- アイテム 2 -->
                 <div class="col-md-4">
-                    <div class="pet-card">
-                        <div class="position-absolute top-0 end-0 m-3">
-                            <span class="badge bg-warning text-dark rounded-pill">優先度：中</span>
+                    <div class="card h-100 border-0 shadow-sm rounded-4 overflow-hidden position-relative">
+                        <div class="position-absolute top-0 end-0 m-3 z-1">
+                            <span class="badge bg-warning text-dark rounded-pill shadow-sm">優先度：中</span>
                         </div>
                         <img src="https://placehold.co/400x250/aaaaaa/ffffff?text=NB+993+Grey" class="card-img-top" alt="NB 993">
-                        <div class="p-4 text-center">
-                            <span class="category-badge" style="background: #06b6d4;">New Balance</span>
-                            <h4 class="fw-bold mb-2 text-brown">MR993GL</h4>
-                            <p class="text-muted small mb-3">
+                        <div class="card-body text-center p-4">
+                            <span class="badge bg-info text-dark mb-2">New Balance</span>
+                            <h4 class="card-title fw-bold mb-2 text-brown">MR993GL</h4>
+                            <p class="card-text text-muted small mb-3">
                                 "Grey"<br>
                                 どんなコーデにも合う万能モデル。
                             </p>
@@ -129,7 +130,7 @@
                                     <div class="fw-bold">再販待ち</div>
                                 </div>
                             </div>
-                            <button class="btn btn-outline-primary rounded-pill w-100">
+                            <button class="btn btn-outline-primary rounded-pill w-100 stretched-link">
                                 詳細を見る <i class="bi bi-arrow-right"></i>
                             </button>
                         </div>
@@ -138,15 +139,15 @@
 
                 <!-- アイテム 3 -->
                 <div class="col-md-4">
-                    <div class="pet-card">
-                        <div class="position-absolute top-0 end-0 m-3">
-                            <span class="badge bg-secondary rounded-pill">優先度：低</span>
+                    <div class="card h-100 border-0 shadow-sm rounded-4 overflow-hidden position-relative">
+                        <div class="position-absolute top-0 end-0 m-3 z-1">
+                            <span class="badge bg-secondary rounded-pill shadow-sm">優先度：低</span>
                         </div>
                         <img src="https://placehold.co/400x250/22c55e/ffffff?text=Dunk+Low+Brazil" class="card-img-top" alt="Dunk Low">
-                        <div class="p-4 text-center">
-                            <span class="category-badge" style="background: #22c55e;">NIKE</span>
-                            <h4 class="fw-bold mb-2 text-brown">Dunk Low SP</h4>
-                            <p class="text-muted small mb-3">
+                        <div class="card-body text-center p-4">
+                            <span class="badge bg-success mb-2">NIKE</span>
+                            <h4 class="card-title fw-bold mb-2 text-brown">Dunk Low SP</h4>
+                            <p class="card-text text-muted small mb-3">
                                 "Brazil"<br>
                                 夏に履きたい鮮やかなカラー。
                             </p>
@@ -160,7 +161,7 @@
                                     <div class="fw-bold">2024/02</div>
                                 </div>
                             </div>
-                            <button class="btn btn-outline-success rounded-pill w-100">
+                            <button class="btn btn-outline-success rounded-pill w-100 stretched-link">
                                 詳細を見る <i class="bi bi-arrow-right"></i>
                             </button>
                         </div>
@@ -171,14 +172,14 @@
 
         <!-- カテゴリから探す -->
         <section class="mb-5">
-            <h2 class="text-center fw-bold section-title" style="color: var(--brown-color);">
+            <h2 class="text-center fw-bold section-title text-brown">
                 <i class="bi bi-search"></i> 新作をチェック
             </h2>
             <p class="text-center text-muted mb-5">ブランドごとのリーク情報を見る</p>
 
             <div class="row g-3">
                 <div class="col-6 col-md-3">
-                    <a href="#" class="text-decoration-none">
+                    <a href="sneaker-list.html" class="text-decoration-none">
                         <div class="feature-card">
                             <div class="feature-icon" style="background: rgba(251, 146, 60, 0.1); color: var(--secondary-color);">
                                 <i class="bi bi-calendar-check"></i>
@@ -189,7 +190,7 @@
                     </a>
                 </div>
                 <div class="col-6 col-md-3">
-                    <a href="#" class="text-decoration-none">
+                    <a href="sneaker-list.html" class="text-decoration-none">
                         <div class="feature-card">
                             <div class="feature-icon" style="background: rgba(251, 146, 60, 0.1); color: #fb923c;">
                                 <i class="bi bi-calendar-check"></i>
@@ -200,7 +201,7 @@
                     </a>
                 </div>
                 <div class="col-6 col-md-3">
-                    <a href="#" class="text-decoration-none">
+                    <a href="sneaker-list.html" class="text-decoration-none">
                         <div class="feature-card">
                             <div class="feature-icon" style="background: rgba(6, 182, 212, 0.1); color: #06b6d4;">
                                 <i class="bi bi-calendar-check"></i>
@@ -211,7 +212,7 @@
                     </a>
                 </div>
                 <div class="col-6 col-md-3">
-                    <a href="#" class="text-decoration-none">
+                    <a href="sneaker-list.html" class="text-decoration-none">
                         <div class="feature-card">
                             <div class="feature-icon" style="background: rgba(139, 92, 246, 0.1); color: #8b5cf6;">
                                 <i class="bi bi-calendar-check"></i>
